move the location of database file

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [files]
-db_file = database/database.db
+db_file = database.db
 keyword_file = keywords.list
 keyword_urls = keywords.urls
 keyword_user_file = keywords.user
@@ -20,6 +20,8 @@ wrong_log = [{}]\n{}\n Options are ({}), you selected '{}', but correct one is '
 fresh_questions_total = Totally fresh {} questions.
 unsupported_command = unsupported command
 subcommand_help = navtigate to different part of software
+pull_file_prompt = Reading {}
+pull_rss_prompt = Fetch {}
 
 [keys]
 remove_question_key = R
@@ -27,3 +29,7 @@ quit_key = Q
 
 [userAgent]
 useragent = 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/81.0.4044.122 Safari/537.36'
+
+[sentence]
+sentence_longest = 20
+sentence_shortest = 10
