add Medium Aritcles as another source

--- a/config.ini
+++ b/config.ini
@@ -6,6 +6,7 @@ keyword_user_file = keywords.user
 keyword_exclude = a,an
 essay_path = articles
 rss_urls = rssfeeds.urls
+medium_urls = medium.urls
 wrong_log = wrong.log
 
 [literal]
@@ -22,13 +23,14 @@ unsupported_command = unsupported command
 subcommand_help = navtigate to different part of software
 pull_file_prompt = Reading {}
 pull_rss_prompt = Fetch {}
+pull_medium_prompt = Fetch {}
 
 [keys]
 remove_question_key = R
 quit_key = Q
 
-[userAgent]
-useragent = 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/81.0.4044.122 Safari/537.36'
+[domain]
+medium_domain = medium.com
 
 [sentence]
 sentence_longest = 20
