--- a/config.ini
+++ b/config.ini
@@ -24,6 +24,7 @@ subcommand_help = navtigate to different part of software
 pull_file_prompt = Reading {}
 pull_rss_prompt = Fetch {}
 pull_medium_prompt = Fetch {}
+is_ignore_default_keywords = Do you want to skip pulling default keywords?(Y/N,default to N) :
 
 [keys]
 remove_question_key = R
