--- a/config.ini
+++ b/config.ini
@@ -3,7 +3,7 @@ db_file = database.db
 keyword_file = keywords.list
 keyword_urls = keywords.urls
 keyword_user_file = keywords.user
-keyword_exclude = a,an
+keyword_exclude = a,an,on,in,to,of
 essay_path = articles
 rss_urls = rssfeeds.urls
 medium_urls = medium.urls
