replace multi url files with single one

--- a/config.ini
+++ b/config.ini
@@ -1,12 +1,10 @@
 [files]
 db_file = database.db
+source = source.url
 keyword_file = keywords.list
-keyword_urls = keywords.urls
 keyword_user_file = keywords.user
-keyword_exclude = a,an,on,in,to,of
+keyword_exclude = a,an,on,in,to,of,but
 essay_path = articles
-rss_urls = rssfeeds.urls
-medium_urls = medium.urls
 wrong_log = wrong.log
 
 [literal]
