add check if network is in china

--- a/config.ini
+++ b/config.ini
@@ -34,3 +34,7 @@ medium_domain = medium.com
 [sentence]
 sentence_longest = 20
 sentence_shortest = 10
+
+[connetcion]
+china_check_url = https://www.baidu.com
+global_check_url = https://www.google.com
