move helper out of inheritance

--- a/config.ini
+++ b/config.ini
@@ -35,6 +35,6 @@ medium_domain = medium.com
 sentence_longest = 20
 sentence_shortest = 10
 
-[connetcion]
+[connection]
 china_check_url = https://www.baidu.com
 global_check_url = https://www.google.com
