read and write file using utf8

--- a/config.ini
+++ b/config.ini
@@ -15,7 +15,7 @@ no_question = No questions exists in database, Run fresh command to fetch some..
 input = Input your pick : 
 exception = Some error happened!
 score = You have done {} questions, in which {} is correct and {} is wrong.
-wrong_log = [{}]\n{}\n Options are ({}), you selected '{}', but correct one is '{}'\n 
+wrong_log = [{}]|{}|Options are ({}), you selected '{}', but correct one is '{}' 
 fresh_questions_total = Totally fresh {} questions.
 unsupported_command = unsupported command
 subcommand_help = navtigate to different part of software
