read config block from ini file

--- a/config.ini
+++ b/config.ini
@@ -8,7 +8,7 @@ essay_path = articles
 wrong_log = wrong.log
 
 [literal]
-title = English Gap Filling
+title = English Cloze Exercise
 right = ✔  CORRECT
 wrong = ✘  WRONG! The correct one is {}
 no_question = No questions exists in database, Run fresh command to fetch some...
