--- a/config/config.ini
+++ b/config/config.ini
@@ -1,11 +1,10 @@
 [files]
 db_file = database.db
-source = source.url
-keyword_file = keywords.list
+source = config/source.url
 keyword_user_file = keywords.user
 keyword_exclude = a,an,on,in,to,of,but
 essay_path = articles
-wrong_log = wrong.log
+wrong_log = log/wrong.log
 
 [literal]
 title = English Cloze Exercise
