use binary file to save use defined keywords and add keywords edit command line interface

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,7 +1,7 @@
 [files]
 db_file = database.db
 source = config/source.url
-keyword_user_file = keywords.user
+keyword_user_file = keywords.dat
 keyword_exclude = a,an,on,in,to,of,but
 essay_path = articles
 wrong_log = log/wrong.log
@@ -22,6 +22,9 @@ pull_file_prompt = Reading {}
 pull_rss_prompt = Fetch {}
 pull_medium_prompt = Fetch {}
 is_ignore_default_keywords = Do you want to skip pulling default keywords?(Y/N,default to N) :
+search_user_keyword_found = Found {}
+search_user_keyword_unfound = Nothing Found
+remove_user_keyword = {} is removed
 
 [keys]
 remove_question_key = R
