add Server Module

--- a/config/config.ini
+++ b/config/config.ini
@@ -40,3 +40,6 @@ sentence_shortest = 10
 [connection]
 china_check_url = https://www.baidu.com
 global_check_url = https://www.google.com
+
+[server]
+server_port = 9000
