use electron as desktop

--- a/cli/config/config.ini
+++ b/cli/config/config.ini
@@ -1,7 +1,7 @@
 [files]
-db_file = database.db
+db_file = data/database.db
 source = config/source.url
-keyword_user_file = keywords.dat
+keyword_user_file = data/keywords.dat
 keyword_exclude = a,an,on,in,to,of,but
 essay_path = articles
 wrong_log = log/wrong.log
