--- a/cli/config/config.ini
+++ b/cli/config/config.ini
@@ -1,4 +1,5 @@
 [files]
+config = config/config.ini
 db_file = data/database.db
 source = config/source.url
 keyword_user_file = data/keywords.dat
@@ -11,10 +12,10 @@ title = English Cloze Exercise
 right = ✔  CORRECT
 wrong = ✘  WRONG! The correct one is {}
 no_question = No questions exists in database, Run fresh command to fetch some...
-input = Input your pick : 
+input = Input your pick :
 exception = Some error happened!
 score = You have done {} questions, in which {} is correct and {} is wrong.
-wrong_log = [{}]|{}|Options are ({}), you selected '{}', but correct one is '{}' 
+wrong_log = [{}]|{}|Options are ({}), you selected '{}', but correct one is '{}'
 fresh_questions_total = Totally fresh {} questions.
 unsupported_command = unsupported command
 subcommand_help = navtigate to different part of software
