--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {},
   "devDependencies": {
     "electron": "^8.2.5",
+    "electron-packager": "^14.2.1",
     "electron-rebuild": "^1.10.1"
   }
 }
