--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "./node_modules/.bin/electron .",
-    "package" : "./node_modules/.bin/electron-packager . --overwrite --ignore=cli$ --out=release",
+    "package" : "./node_modules/.bin/electron-packager . --overwrite --ignore=cli$ --out=release --icon=cloze.ico",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
